[gd_scene load_steps=19 format=3 uid="uid://hd6wc68o7osy"]

[ext_resource type="Script" path="res://SCRIPTS/Game_Room.gd" id="1_lue75"]
[ext_resource type="Texture2D" uid="uid://c1l4tcbtavjpl" path="res://ASSETS/Solid_white.png" id="2_vl1qh"]
[ext_resource type="PackedScene" uid="uid://igx155esedds" path="res://SCENES/NETWORKING/network_var_sync.tscn" id="3_xwpkr"]
[ext_resource type="Script" path="res://SCENES/RaceGame/PlayerStartArea.gd" id="4_4ue7r"]
[ext_resource type="Texture2D" uid="uid://c2okxybv000jq" path="res://ASSETS/transparent_white.png" id="4_8k6fy"]
[ext_resource type="Script" path="res://SCRIPTS/WALLOFDEATH.gd" id="5_gnxqn"]
[ext_resource type="Script" path="res://SCRIPTS/RaceCamera.gd" id="6_iaqfd"]
[ext_resource type="Script" path="res://SCENES/RaceGame/finish_line.gd" id="7_sku0x"]
[ext_resource type="Script" path="res://SCENES/RaceGame/MOVINGPLATFORM.gd" id="9_hyug6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_allfg"]
size = Vector2(600, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_522k5"]
size = Vector2(20, 187)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8xlv8"]
size = Vector2(126, 118)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hsjdx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idjkw"]
size = Vector2(63, 189)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f8aet"]
size = Vector2(196, 850)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pa4d7"]
size = Vector2(20, 517)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aop8e"]
size = Vector2(1e+07, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hysj1"]
size = Vector2(300, 20)

[node name="GAME" type="Node2D" node_paths=PackedStringArray("textLabel", "WALLOFDEATH", "DOOR", "Game_message", "LobbyButton")]
script = ExtResource("1_lue75")
textLabel = NodePath("PlayerStartArea/RichTextLabel")
WALLOFDEATH = NodePath("WALLOFDEATH")
DOOR = NodePath("DOOR")
Game_message = NodePath("WALLOFDEATH/GameMessage")
LobbyButton = NodePath("Control/Lobby Button")

[node name="LobbyGround" type="StaticBody2D" parent="."]
position = Vector2(557.705, 500)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LobbyGround"]
position = Vector2(6.29498, 1)
shape = SubResource("RectangleShape2D_allfg")

[node name="Sprite2D" type="Sprite2D" parent="LobbyGround"]
position = Vector2(-0.20504, 1)
scale = Vector2(2.935, 0.1)
texture = ExtResource("2_vl1qh")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 312.0
offset_top = 561.0
offset_right = 352.0
offset_bottom = 601.0

[node name="Leave Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = -25.0
offset_top = 2.0
offset_right = 81.0
offset_bottom = 33.0
text = "LEAVE GAME"

[node name="Lobby Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = -24.0
offset_top = -37.0
offset_right = 125.0
offset_bottom = -6.0
disabled = true
text = "Return To Lobby"

[node name="DOOR" type="StaticBody2D" parent="."]
position = Vector2(851, 501)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DOOR"]
position = Vector2(-1, -83.5)
shape = SubResource("RectangleShape2D_522k5")

[node name="Sprite2D" type="Sprite2D" parent="DOOR"]
position = Vector2(-0.999977, -83.5)
scale = Vector2(0.1175, 0.945)
texture = ExtResource("2_vl1qh")

[node name="NetworkVarSync" parent="DOOR" instance=ExtResource("3_xwpkr")]
unreliable_sync_vars = {
NodePath(".."): ["global_position"]
}

[node name="PlayerStartArea" type="Area2D" parent="." node_paths=PackedStringArray("textLabel")]
position = Vector2(795, 449)
script = ExtResource("4_4ue7r")
textLabel = NodePath("RichTextLabel")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerStartArea"]
position = Vector2(-26, -26)
shape = SubResource("RectangleShape2D_8xlv8")

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerStartArea"]
offset_left = -87.0
offset_top = -79.0
offset_right = 41.0
offset_bottom = -50.0
text = "HELLLo
"
fit_content = true

[node name="Sprite2D" type="Sprite2D" parent="PlayerStartArea"]
material = SubResource("ShaderMaterial_hsjdx")
position = Vector2(-23.5, -18.5)
scale = Vector2(0.675, 0.665)
texture = ExtResource("4_8k6fy")

[node name="NetworkVarSync" parent="PlayerStartArea" instance=ExtResource("3_xwpkr")]
reliable_sync_vars = {
NodePath("../RichTextLabel"): ["text"]
}

[node name="FINISHLine" type="Area2D" parent="."]
position = Vector2(4672, 549)
script = ExtResource("7_sku0x")

[node name="Sprite2D" type="Sprite2D" parent="FINISHLine"]
position = Vector2(-22.4999, -113)
scale = Vector2(0.315, 0.99)
texture = ExtResource("4_8k6fy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FINISHLine"]
position = Vector2(-22.5, -116.5)
shape = SubResource("RectangleShape2D_idjkw")

[node name="WALLOFDEATH" type="Area2D" parent="."]
position = Vector2(164, 8)
script = ExtResource("5_gnxqn")

[node name="Sprite2D" type="Sprite2D" parent="WALLOFDEATH"]
position = Vector2(0, 324.5)
scale = Vector2(1, 4.245)
texture = ExtResource("2_vl1qh")

[node name="Camera2D" type="Camera2D" parent="WALLOFDEATH"]
position = Vector2(548, 331)
scale = Vector2(1, 4.245)
offset = Vector2(29.67, 0)
zoom = Vector2(2, 2)
script = ExtResource("6_iaqfd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALLOFDEATH"]
position = Vector2(0, 327)
shape = SubResource("RectangleShape2D_f8aet")

[node name="GameMessage" type="RichTextLabel" parent="WALLOFDEATH"]
offset_left = 457.0
offset_top = 308.0
offset_right = 922.0
offset_bottom = 348.0

[node name="NetworkVarSync" parent="WALLOFDEATH" instance=ExtResource("3_xwpkr")]
reliable_sync_vars = {
NodePath(".."): ["velocity"],
NodePath("../GameMessage"): ["text"]
}
unreliable_sync_vars = {
NodePath(".."): ["global_position"]
}

[node name="StaticBody2D" type="StaticBody2D" parent="WALLOFDEATH"]
position = Vector2(90, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALLOFDEATH/StaticBody2D"]
position = Vector2(0, 248.5)
shape = SubResource("RectangleShape2D_pa4d7")

[node name="BOTTOMOUTOFBOUND" type="Area2D" parent="."]
position = Vector2(362, 849)
script = ExtResource("5_gnxqn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BOTTOMOUTOFBOUND"]
position = Vector2(0, 327)
shape = SubResource("RectangleShape2D_aop8e")

[node name="RUN_LEVEL" type="Node2D" parent="."]

[node name="FirstJumpingArea" type="Node2D" parent="RUN_LEVEL"]

[node name="StaticBody2D" type="StaticBody2D" parent="RUN_LEVEL/FirstJumpingArea"]
position = Vector2(1010, 501)

[node name="Sprite2D" type="Sprite2D" parent="RUN_LEVEL/FirstJumpingArea/StaticBody2D"]
scale = Vector2(1.4975, 0.11)
texture = ExtResource("2_vl1qh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RUN_LEVEL/FirstJumpingArea/StaticBody2D"]
shape = SubResource("RectangleShape2D_hysj1")

[node name="StaticBody2D2" type="StaticBody2D" parent="RUN_LEVEL/FirstJumpingArea"]
position = Vector2(1580, 501)

[node name="Sprite2D" type="Sprite2D" parent="RUN_LEVEL/FirstJumpingArea/StaticBody2D2"]
scale = Vector2(1.4975, 0.11)
texture = ExtResource("2_vl1qh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RUN_LEVEL/FirstJumpingArea/StaticBody2D2"]
shape = SubResource("RectangleShape2D_hysj1")

[node name="StaticBody2D3" type="StaticBody2D" parent="RUN_LEVEL/FirstJumpingArea"]
position = Vector2(2150, 500)

[node name="Sprite2D" type="Sprite2D" parent="RUN_LEVEL/FirstJumpingArea/StaticBody2D3"]
scale = Vector2(1.4975, 0.11)
texture = ExtResource("2_vl1qh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RUN_LEVEL/FirstJumpingArea/StaticBody2D3"]
shape = SubResource("RectangleShape2D_hysj1")

[node name="StaticBody2D4" type="StaticBody2D" parent="RUN_LEVEL/FirstJumpingArea"]
position = Vector2(2720, 500)

[node name="Sprite2D" type="Sprite2D" parent="RUN_LEVEL/FirstJumpingArea/StaticBody2D4"]
scale = Vector2(1.4975, 0.11)
texture = ExtResource("2_vl1qh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RUN_LEVEL/FirstJumpingArea/StaticBody2D4"]
shape = SubResource("RectangleShape2D_hysj1")

[node name="Staircase" type="StaticBody2D" parent="RUN_LEVEL"]
position = Vector2(3290, 500)

[node name="Sprite2D" type="Sprite2D" parent="RUN_LEVEL/Staircase"]
scale = Vector2(1.4975, 0.11)
texture = ExtResource("2_vl1qh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RUN_LEVEL/Staircase"]
shape = SubResource("RectangleShape2D_hysj1")

[node name="StaticBody2D" type="StaticBody2D" parent="RUN_LEVEL/Staircase"]
position = Vector2(20, -20)

[node name="Sprite2D" type="Sprite2D" parent="RUN_LEVEL/Staircase/StaticBody2D"]
scale = Vector2(1.4975, 0.11)
texture = ExtResource("2_vl1qh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RUN_LEVEL/Staircase/StaticBody2D"]
shape = SubResource("RectangleShape2D_hysj1")

[node name="StaticBody2D" type="StaticBody2D" parent="RUN_LEVEL/Staircase/StaticBody2D"]
position = Vector2(20, -20)

[node name="Sprite2D" type="Sprite2D" parent="RUN_LEVEL/Staircase/StaticBody2D/StaticBody2D"]
scale = Vector2(1.4975, 0.11)
texture = ExtResource("2_vl1qh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RUN_LEVEL/Staircase/StaticBody2D/StaticBody2D"]
shape = SubResource("RectangleShape2D_hysj1")

[node name="StaticBody2D" type="StaticBody2D" parent="RUN_LEVEL/Staircase/StaticBody2D/StaticBody2D"]
position = Vector2(20, -20)

[node name="Sprite2D" type="Sprite2D" parent="RUN_LEVEL/Staircase/StaticBody2D/StaticBody2D/StaticBody2D"]
scale = Vector2(1.4975, 0.11)
texture = ExtResource("2_vl1qh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RUN_LEVEL/Staircase/StaticBody2D/StaticBody2D/StaticBody2D"]
shape = SubResource("RectangleShape2D_hysj1")

[node name="StaticBody2D" type="StaticBody2D" parent="RUN_LEVEL/Staircase/StaticBody2D/StaticBody2D/StaticBody2D"]
position = Vector2(20, -20)

[node name="Sprite2D" type="Sprite2D" parent="RUN_LEVEL/Staircase/StaticBody2D/StaticBody2D/StaticBody2D/StaticBody2D"]
scale = Vector2(1.4975, 0.11)
texture = ExtResource("2_vl1qh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RUN_LEVEL/Staircase/StaticBody2D/StaticBody2D/StaticBody2D/StaticBody2D"]
shape = SubResource("RectangleShape2D_hysj1")

[node name="MOVING PLATFORM OBSTACLE" type="Node2D" parent="RUN_LEVEL"]

[node name="StaticBody2D" type="StaticBody2D" parent="RUN_LEVEL/MOVING PLATFORM OBSTACLE"]
position = Vector2(3821, 400)

[node name="Sprite2D" type="Sprite2D" parent="RUN_LEVEL/MOVING PLATFORM OBSTACLE/StaticBody2D"]
scale = Vector2(1.4975, 0.11)
texture = ExtResource("2_vl1qh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RUN_LEVEL/MOVING PLATFORM OBSTACLE/StaticBody2D"]
shape = SubResource("RectangleShape2D_hysj1")

[node name="MOVINGPLATFORM" type="AnimatableBody2D" parent="RUN_LEVEL/MOVING PLATFORM OBSTACLE"]
position = Vector2(4054, 324)
script = ExtResource("9_hyug6")
velocity = Vector2(-20, 0)

[node name="Sprite2D" type="Sprite2D" parent="RUN_LEVEL/MOVING PLATFORM OBSTACLE/MOVINGPLATFORM"]
scale = Vector2(1.4975, 0.11)
texture = ExtResource("2_vl1qh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RUN_LEVEL/MOVING PLATFORM OBSTACLE/MOVINGPLATFORM"]
shape = SubResource("RectangleShape2D_hysj1")

[node name="TimeTillTurnTimer" type="Timer" parent="RUN_LEVEL/MOVING PLATFORM OBSTACLE/MOVINGPLATFORM"]
autostart = true

[node name="NetworkVarSync" parent="RUN_LEVEL/MOVING PLATFORM OBSTACLE/MOVINGPLATFORM" instance=ExtResource("3_xwpkr")]

[node name="FINISHLINEPLATFORM" type="StaticBody2D" parent="RUN_LEVEL"]
position = Vector2(4660, 542)

[node name="Sprite2D" type="Sprite2D" parent="RUN_LEVEL/FINISHLINEPLATFORM"]
scale = Vector2(1.4975, 0.11)
texture = ExtResource("2_vl1qh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RUN_LEVEL/FINISHLINEPLATFORM"]
shape = SubResource("RectangleShape2D_hysj1")

[connection signal="button_down" from="Control/Leave Button" to="." method="_on_leave_button_button_down"]
[connection signal="button_down" from="Control/Lobby Button" to="." method="_on_lobby_button_button_down"]
[connection signal="body_entered" from="PlayerStartArea" to="PlayerStartArea" method="_on_body_entered"]
[connection signal="body_exited" from="PlayerStartArea" to="PlayerStartArea" method="_on_body_exited"]
[connection signal="body_entered" from="FINISHLine" to="FINISHLine" method="_on_body_entered"]
[connection signal="body_entered" from="WALLOFDEATH" to="WALLOFDEATH" method="_on_body_entered"]
[connection signal="body_entered" from="BOTTOMOUTOFBOUND" to="BOTTOMOUTOFBOUND" method="_on_body_entered"]
[connection signal="timeout" from="RUN_LEVEL/MOVING PLATFORM OBSTACLE/MOVINGPLATFORM/TimeTillTurnTimer" to="RUN_LEVEL/MOVING PLATFORM OBSTACLE/MOVINGPLATFORM" method="_on_time_till_turn_timer_timeout"]
